--- a/style.css
+++ b/style.css
@@ -8,6 +8,55 @@ body {
     margin: 0;
 }
 
+.popup-overlay {
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background-color: #007bff; /* Blue background */
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    z-index: 1000;
+}
+
+.popup-content {
+    background-color: transparent; /* Transparent background */
+    padding: 30px;
+    border-radius: 10px;
+    text-align: center;
+    color: white; /* White text */
+}
+
+.popup-content h2 {
+    margin-top: 0;
+    color: #333;
+    font-size: 24px;
+    margin-bottom: 20px;
+}
+
+.popup-buttons button {
+    margin: 0 10px;
+    padding: 20px 20px;
+    font-size: 3em;
+    cursor: pointer;
+    border: none;
+    border-radius: 0.5em;
+}
+
+#continueButton {
+    background-color: white;
+    color: black;
+}
+
+
+#exitButton {
+    background-color: white;
+    color: black;
+}
+
+
 .captcha-card {
     background: #fff;
     border-radius: 8px;
@@ -21,7 +70,7 @@ body {
     border-radius: 8px;
     box-shadow: 0 2px 8px rgba(0, 0, 0, 0.1);
     overflow: hidden;
-    max-width: 928px;;
+    max-width: 928px;
 }
 
 .texts-page .menu-card {
@@ -59,7 +108,7 @@ body {
     padding: 20px 20px;
 }
 
-p {color: #999;padding: 0px 25px;}
+p {color: #999;padding: 0px 25px; font-size: 12px;}
 
 .captcha-grid {
     display: grid;
